--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,25 +15,26 @@ jobs:
         with:
           enable-stack: true
 
-      - name: Install GHC 
-        run: stack setup
-
-      - name: Cache stack
+      - name: Cache stack and tools
         uses: actions/cache@v3
         env:
           cache-name: cache-stack
         with:
           path: |
             ~/.stack
+            ~/.local/bin
             .stack-work
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/stack.yaml') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
 
+      - name: Install GHC 
+        run: stack setup
+
       - name: Install tools 
         run: |
-            stack install ormolu
-            stack install hlint
+          command -v ormolu >/dev/null 2>&1 || stack install --fast ormolu
+          command -v hlint >/dev/null 2>&1 || stack install --fast hlint
 
       - name: Check formatting
         run: stack exec ormolu -- --mode check $(find src test -name "*.hs")
